--- a/css file/css_file.css
+++ b/css file/css_file.css
@@ -8,12 +8,13 @@ body{
 h1 {
   text-align: center;
   margin-bottom: 15px;
+  font-size:1.75em;
 }
 
 p {
   padding: 30px 15px;
   width: 100%;
-  
+  font-size:1.25em;
   color: black;
 }
 .yellow{
